--- a/CoordinateSystems.ipynb
+++ b/CoordinateSystems.ipynb
@@ -392,6 +392,147 @@
     "   \n",
     "   Therefore, $\\vec{v}_1 + \\vec{v}_2 \\approx (5.12, 64.47°)$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ad628b",
+   "metadata": {},
+   "source": [
+    "### Polar Coordinate System in $E^3$\n",
+    "\n",
+    "In $E^3$ (3D Euclidean space), the polar coordinate system is actually called the **spherical coordinate system**. This extends the 2D polar coordinates to handle the additional dimension.\n",
+    "\n",
+    "### Spherical Coordinates Definition\n",
+    "\n",
+    "A point $P$ in $E^3$ is represented by three coordinates $(r, \\theta, \\phi)$ where:\n",
+    "\n",
+    "- $r$ = radial distance from the origin (distance to the point)\n",
+    "- $\\theta$ = polar angle (inclination from the z-axis, ranges from 0 to $\\pi$)\n",
+    "- $\\phi$ = azimuthal angle (rotation around z-axis, ranges from 0 to $2\\pi$)\n",
+    "\n",
+    "### Relationship with Cartesian Coordinates\n",
+    "\n",
+    "For a point $(x, y, z)$ in Cartesian coordinates, the conversion to spherical coordinates $(r, \\theta, \\phi)$ is:\n",
+    "\n",
+    "- $r = \\sqrt{x^2 + y^2 + z^2}$\n",
+    "- $\\theta = \\arccos(\\frac{z}{r})$\n",
+    "- $\\phi = \\arctan2(y, x)$\n",
+    "\n",
+    "And the reverse conversion, from spherical to Cartesian:\n",
+    "\n",
+    "- $x = r\\sin\\theta\\cos\\phi$\n",
+    "- $y = r\\sin\\theta\\sin\\phi$\n",
+    "- $z = r\\cos\\theta$\n",
+    "\n",
+    "### Connection to our Sphere Code\n",
+    "\n",
+    "In chapter 2.1 the code for creating the hemisphere, is already using spherical coordinates:\n",
+    "\n",
+    "```python\n",
+    "# Use spherical coordinates for better triangulation\n",
+    "theta = np.linspace(0, np.pi/2, grid_resolution)  # Upper hemisphere only (0 to π/2)\n",
+    "phi = np.linspace(0, 2*np.pi, grid_resolution)    # Full circle in azimuthal angle\n",
+    "\n",
+    "# Convert to Cartesian\n",
+    "x_sphere = center_x + radius * np.sin(theta_1d) * np.cos(phi_1d)\n",
+    "y_sphere = center_y + radius * np.sin(theta_1d) * np.sin(phi_1d)\n",
+    "z_sphere = center_z + radius * np.cos(theta_1d)\n",
+    "```\n",
+    "\n",
+    "This is exactly the spherical coordinate system at work, where:\n",
+    "- `radius` corresponds to $r$ (fixed at 5 for your sphere)\n",
+    "- `theta` ranges from 0 to π/2 (creating just the upper hemisphere)\n",
+    "- `phi` ranges from 0 to 2π (creating a full circle at each latitude)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d42c386c",
+   "metadata": {},
+   "source": [
+    "# Coordinate System Conversion Table\n",
+    "\n",
+    "| Conversion | Formula | Notes |\n",
+    "|------------|---------|-------|\n",
+    "| **Spherical to Cartesian** | $x = \\rho \\sin\\theta \\cos\\phi$ <br> $y = \\rho \\sin\\theta \\sin\\phi$ <br> $z = \\rho \\cos\\theta$ | $\\rho$ = radial distance <br> $\\theta$ = polar angle (from z-axis) <br> $\\phi$ = azimuthal angle (from x-axis in xy-plane) |\n",
+    "| **Cartesian to Spherical** | $\\rho = \\sqrt{x^2 + y^2 + z^2}$ <br> $\\theta = \\arccos\\left(\\frac{z}{\\rho}\\right)$ <br> $\\phi = \\arctan2(y, x)$ | $\\theta \\in [0, \\pi]$ <br> $\\phi \\in [0, 2\\pi)$ <br> Use $\\arctan2$ to get correct quadrant |\n",
+    "| **Spherical to Cylindrical** | $r = \\rho \\sin\\theta$ <br> $\\phi = \\phi$ (unchanged) <br> $z = \\rho \\cos\\theta$ | $r$ = radial distance from z-axis <br> $\\phi$ = azimuthal angle (same in both systems) |\n",
+    "| **Cylindrical to Spherical** | $\\rho = \\sqrt{r^2 + z^2}$ <br> $\\theta = \\arccos\\left(\\frac{z}{\\rho}\\right)$ <br> $\\phi = \\phi$ (unchanged) | $\\theta = \\arctan\\left(\\frac{r}{z}\\right)$ can be used but check quadrants |\n",
+    "| **Cylindrical to Cartesian** | $x = r \\cos\\phi$ <br> $y = r \\sin\\phi$ <br> $z = z$ (unchanged) | $r$ = radial distance from z-axis <br> $\\phi$ = azimuthal angle <br> z-coordinate remains unchanged |\n",
+    "| **Cartesian to Cylindrical** | $r = \\sqrt{x^2 + y^2}$ <br> $\\phi = \\arctan2(y, x)$ <br> $z = z$ (unchanged) | $r \\geq 0$ <br> $\\phi \\in [0, 2\\pi)$ <br> Use $\\arctan2$ to get correct quadrant |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "990aeb12",
+   "metadata": {},
+   "source": [
+    "# Solving Vector Addition Across Different Coordinate Systems\n",
+    "\n",
+    "This problem requires adding vectors that are represented in different coordinate systems (spherical and cylindrical). I'll break down the approach step by step.\n",
+    "\n",
+    "## Key Definitions\n",
+    "\n",
+    "1. **Spherical Coordinates**: $(r, \\theta, \\phi)$ where:\n",
+    "   - $r$ = radial distance from origin\n",
+    "   - $\\theta$ = polar angle (from z-axis)\n",
+    "   - $\\phi$ = azimuthal angle (in xy-plane)\n",
+    "\n",
+    "2. **Cylindrical Coordinates**: $(r, \\phi, z)$ where:\n",
+    "   - $r$ = radial distance from z-axis\n",
+    "   - $\\phi$ = azimuthal angle (in xy-plane)\n",
+    "   - $z$ = height along z-axis\n",
+    "\n",
+    "3. **Coordinate Conversions**:\n",
+    "   - Spherical to Cartesian:\n",
+    "     - $x = r\\sin\\theta\\cos\\phi$\n",
+    "     - $y = r\\sin\\theta\\sin\\phi$\n",
+    "     - $z = r\\cos\\theta$\n",
+    "   \n",
+    "   - Cylindrical to Cartesian:\n",
+    "     - $x = r\\cos\\phi$\n",
+    "     - $y = r\\sin\\phi$\n",
+    "     - $z = z$\n",
+    "\n",
+    "## Solution Method\n",
+    "\n",
+    "### Step 1: Convert both vectors to Cartesian coordinates\n",
+    "\n",
+    "For $\\vec{v_1} = (3, 0.75\\pi, 0.25\\pi)$ in spherical coordinates:\n",
+    "- $r = 3$\n",
+    "- $\\theta = 0.75\\pi$ (135°)\n",
+    "- $\\phi = 0.25\\pi$ (45°)\n",
+    "\n",
+    "Converting to Cartesian:\n",
+    "- $x_1 = 3 \\sin(0.75\\pi) \\cos(0.25\\pi) = 3 \\cdot \\frac{\\sqrt{2}}{2} \\cdot \\frac{\\sqrt{2}}{2} = \\frac{3}{2}$\n",
+    "- $y_1 = 3 \\sin(0.75\\pi) \\sin(0.25\\pi) = 3 \\cdot \\frac{\\sqrt{2}}{2} \\cdot \\frac{\\sqrt{2}}{2} = \\frac{3}{2}$\n",
+    "- $z_1 = 3 \\cos(0.75\\pi) = 3 \\cdot (-\\frac{\\sqrt{2}}{2}) = -\\frac{3\\sqrt{2}}{2}$\n",
+    "\n",
+    "For $\\vec{v_2} = (3, 0.75\\pi, 1)$ in cylindrical coordinates:\n",
+    "- $r = 3$\n",
+    "- $\\phi = 0.75\\pi$ (135°)\n",
+    "- $z = 1$\n",
+    "\n",
+    "Converting to Cartesian:\n",
+    "- $x_2 = 3 \\cos(0.75\\pi) = 3 \\cdot (-\\frac{\\sqrt{2}}{2}) = -\\frac{3\\sqrt{2}}{2}$\n",
+    "- $y_2 = 3 \\sin(0.75\\pi) = 3 \\cdot \\frac{\\sqrt{2}}{2} = \\frac{3\\sqrt{2}}{2}$\n",
+    "- $z_2 = 1$\n",
+    "\n",
+    "### Step 2: Add the Cartesian coordinates\n",
+    "\n",
+    "$\\vec{v_1} + \\vec{v_2} = (x_1 + x_2, y_1 + y_2, z_1 + z_2)$\n",
+    "\n",
+    "$= (\\frac{3}{2} + (-\\frac{3\\sqrt{2}}{2}), \\frac{3}{2} + \\frac{3\\sqrt{2}}{2}, -\\frac{3\\sqrt{2}}{2} + 1)$\n",
+    "\n",
+    "$= (\\frac{3 - 3\\sqrt{2}}{2}, \\frac{3 + 3\\sqrt{2}}{2}, 1 - \\frac{3\\sqrt{2}}{2})$\n",
+    "\n",
+    "### Step 3: Simplify if needed\n",
+    "\n",
+    "Final answer in Cartesian coordinates:\n",
+    "$\\vec{v_1} + \\vec{v_2} = (\\frac{3(1-\\sqrt{2})}{2}, \\frac{3(1+\\sqrt{2})}{2}, 1-\\frac{3\\sqrt{2}}{2})$\n",
+    "\n",
+    "This approach demonstrates the general method for adding vectors expressed in different coordinate systems: convert to a common system (typically Cartesian), perform the addition, then convert back to the desired system if needed."
+   ]
   }
  ],
  "metadata": {
